--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ body {
     height: 30vh;
 }
 
+.playerField {
+    background-color: #e0ddd5;
+}
+
 .playerImg {
     display: flex;
     justify-content: center;
@@ -106,6 +110,10 @@ body {
 .playerImg img {
     height: 12rem;
     width: 12rem;
+}
+
+.compField {
+    background-color: #e0ddd5 ;
 }
 
 .compImg {
@@ -130,10 +138,19 @@ body {
     height: 20vh;
 }
 
-.selectionField div {
+.selectionField > div {
     border: 0.2rem solid #2e3546;
     width: 20vw;
     height: 14vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.selectionField input {
+    height: 6rem;
+    width: 6rem;
 }
 
 .contextField {
