--- a/style.css
+++ b/style.css
@@ -59,10 +59,30 @@ body {
 .head {
     background-color: #2e3546;
     color: #e0ddd5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reset {
+    padding: 0.2rem;
+    font-size: 1.5rem;
+    color: #283d70;
+    background-color: #e0ddd5;
+    height: 3rem;
+    width: 5rem;
+    margin-right: 1rem;
+    border-radius: 0.7rem;
+    border: none;
+}
+
+.reset:hover {
+    cursor: pointer;
 }
 
 .head h1 {
-    padding: 1rem 0;
+    flex: 2 2 0;
+    padding-left: 5rem;
 }
 
 .intro {
@@ -71,7 +91,7 @@ body {
 }
 
 .intro h3 {
-    padding: 0.7rem 0 0 0;
+    margin: 1rem 0 0 0;
 }
 
 .gameContainer {
@@ -89,7 +109,7 @@ body {
     border-top: 0.2rem solid #2e3546;
 }
 
-.actionField > div {
+.actionField>div {
     border: 0.2rem solid #2e3546;
     width: 40vw;
     height: 30vh;
@@ -113,7 +133,7 @@ body {
 }
 
 .compField {
-    background-color: #e0ddd5 ;
+    background-color: #e0ddd5;
 }
 
 .compImg {
@@ -138,7 +158,7 @@ body {
     height: 20vh;
 }
 
-.selectionField > div {
+.selectionField>div {
     border: 0.2rem solid #2e3546;
     width: 20vw;
     height: 14vh;
@@ -147,6 +167,9 @@ body {
     justify-content: center;
 }
 
+.selectionField>div:hover {
+    background-color: #d4d2cc;
+}
 
 .selectionField input {
     height: 6rem;
@@ -168,7 +191,12 @@ body {
     border: 0.2rem solid #2e3546;
     width: 80vw;
     height: 4vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+
 
 .tallyBox {
     display: flex;
@@ -184,12 +212,20 @@ body {
     border-left: 0.2rem solid #2e3546;
     border-top: 0.2rem solid #2e3546;
     border-bottom: 0.2rem solid #2e3546;
+    color: #283d70;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .compTally {
     border-right: 0.2rem solid #2e3546;
     border-top: 0.2rem solid #2e3546;
     border-bottom: 0.2rem solid #2e3546;
+    color: #c6934b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 footer {
@@ -200,6 +236,9 @@ footer {
     text-align: center;
 }
 
-footer h4 {
+.secret {
+    background: none;
+    border: none;
     padding: 1.4rem;
+    color: #e0ddd5;
 }
